--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="timeline">Timeline</string>
     <string name="create_an_account">Create an account</string>
     <string name="toggleVisiblity">Toggle Visibility</string>
+    <string name="about">About</string>
 </resources>
