--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="create_an_account">Create an account</string>
     <string name="toggleVisiblity">Toggle Visibility</string>
     <string name="about">About</string>
+    <string name="duplicateAccountError">An account with this email already exists</string>
 </resources>
